--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtre
 /*background-size: 100% 400px;
 */
 background-attachement: fixed;
-background-size: cover;
+background-size: cover 100%;
 
 }
 
