--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@ body {
 font-family: sans-serif;
 
 background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;
-/*background-size: 100% 400px;
-*/
+background-size: 100% 400px;
+
 background-attachement: fixed;
-background-size: cover 100% 100%;
+/*background-size: cover 100% 100%;*/
 
 }
 
