--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 font-family: sans-serif;
 
 background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;
-background-size: cover;
+background-size: cover 100%;
 
 background-attachement: fixed;
 
