--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
 font-family: sans-serif;
 
-background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;
-background-size: cover 70%;
+background:  no-repeat url("https://i.gifer.com/Oi0L.gif"), #ff0000;
+/*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;*/
+background-size: cover 100%;
 
 background-attachement: fixed;
 
