--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 font-family: sans-serif;
 
-background:  no-repeat url("https://preview.redd.it/138pqohhbly41.png?width=2560&format=png&auto=webp&s=62b5bda04fb4ec3823b7a86af3b2955041f22f26"), #ff0000;
+background:  no-repeat url("https://wallup.net/wp-content/uploads/2016/05/27/181126-Minecraft-lava-water-Sun-sea.jpg"), #ff0000;
 /*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;*/
 background-size: cover 100%;
 
