--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 font-family: sans-serif;
 
-background:  no-repeat url("https://wallup.net/wp-content/uploads/2016/05/27/181126-Minecraft-lava-water-Sun-sea.jpg"), #ff0000;
+background:  no-repeat url("https://geekzilla.tech/home/wp-content/uploads/2020/06/image-1.jpg"), #ff0000;
 /*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;*/
 background-size: cover 100%;
 
