--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ body {
     height: 0px;
   }
   .nav > #nav-check:checked ~ .nav-links {
-    height: calc(100vh - 50px);
-    overflow-y: auto;
+      height: 50px;
+    /*height: calc(100vh - 50px);
+    overflow-y: auto;*/
   }
 }
