--- a/style.css
+++ b/style.css
@@ -123,3 +123,14 @@ body {
     overflow-y: auto;*/
   }
 }
+
+/* bouton haut */
+
+.boutique {
+  background: linear-gradient(70deg, blue, pink);
+}
+
+div {
+  width: 120px;
+  height: 120px;
+}
