--- a/style.css
+++ b/style.css
@@ -213,4 +213,35 @@ a {
     }
 }
 
+a span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, $button-color);
+}
+a:hover span:nth-child(1) {
+    left: 100%;
+    transition: 600ms;
+}
+
+
+
+
+/************************************************
+4.	NEON DU BAS
+************************************************/
+
+a span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, $button-color);
+}
+a:hover span:nth-child(3) {
+    right: 100%;
+    transition: 1s;
+    transition-delay: 250ms;
+}
 
