--- a/style.css
+++ b/style.css
@@ -170,4 +170,18 @@ a {
     }
 }
 
+a span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, $button-color);
+}
+a:hover span:nth-child(1) {
+    left: 100%;
+    transition: 600ms;
+}
+
+
+
 
