--- a/style.css
+++ b/style.css
@@ -185,4 +185,16 @@ a:hover span:nth-child(1) {
 
 
 
+a span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, $button-color);
+}
+a:hover span:nth-child(3) {
+    right: 100%;
+    transition: 1s;
+    transition-delay: 250ms;
+}
 
