--- a/style.css
+++ b/style.css
@@ -210,3 +210,15 @@ a:hover span:nth-child(2) {
     transition: 1s;
     transition-delay: 100ms;
 }
+a span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, $button-color);
+}
+a:hover span:nth-child(2) {
+    top: 100%;
+    transition: 1s;
+    transition-delay: 100ms;
+}
