--- a/style.css
+++ b/style.css
@@ -210,15 +210,26 @@ a:hover span:nth-child(2) {
     transition: 1s;
     transition-delay: 100ms;
 }
-a span:nth-child(2) {
-    top: -100%;
-    right: 0;
+
+ 
+ 
+  
+  a span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg, transparent, $button-color);
+    background: linear-gradient(360deg, transparent, $button-color);
 }
-a:hover span:nth-child(2) {
-    top: 100%;
+a:hover span:nth-child(4) {
+    bottom: 100%;
     transition: 1s;
-    transition-delay: 100ms;
+    transition-delay: 450ms;
 }
+    
+
+
+  
+    
+    
+
