--- a/style.css
+++ b/style.css
@@ -123,22 +123,7 @@ body {
     overflow-y: auto;*/
   }
 }
-/*boutton navigation*/
-
-/************************************************************
-
-Fichier : style.scss
-Theme name : neon button
-Description: Original tuto by Online Tutorials -> https://youtu.be/ex7jGbyFgpA
-Author: Shay Reichert
-
-
-
-/************************************************
-0.	Import
-************************************************/
-@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
-
+/*boutton navigue */
 $button-color: #00fff6;
 $second-color: #050f1a;
 a {
@@ -161,72 +146,7 @@ a {
         border-radius: 3px;
         box-shadow: 0 0 10px $button-color, 0 0 40px $button-color, 0 0 80px $button-color;
         transition-delay: 600ms;
-    }
-
-
-    span {
-        position: absolute;
-        display: block;
-    }
-}
-
-a span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, $button-color);
-}
-a:hover span:nth-child(1) {
-    left: 100%;
-    transition: 600ms;
-}
-
-
-
-
-a span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, $button-color);
-}
-a:hover span:nth-child(3) {
-    right: 100%;
-    transition: 1s;
-    transition-delay: 250ms;
-}
-
-a span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, $button-color);
-}
-a:hover span:nth-child(2) {
-    top: 100%;
-    transition: 1s;
-    transition-delay: 100ms;
-}
-
- 
- 
-  
-  a span:nth-child(4) {
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, $button-color);
-}
-a:hover span:nth-child(4) {
-    bottom: 100%;
-    transition: 1s;
-    transition-delay: 450ms;
-}
-    
+   }
 
 
   
