--- a/style.css
+++ b/style.css
@@ -125,5 +125,12 @@ body {
 }
 /*boutton navigue */
 
-    
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;    
 
