--- a/style.css
+++ b/style.css
@@ -133,4 +133,7 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;    
-
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
