--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
 
 
 
-.button {
+.box {
 position: relative;
 text-align:center;
 width: 25%;
@@ -144,7 +144,7 @@ border-radius: 100px;
 transition: 1.5s;
 }
 
-.button:hover {
+.box:hover {
 box-shadow: 0 5px 50px 0 #ff0000 inset, 0 5px 50px 0 #ff0000;
             0 5px 50px 0 #ff0000 inset, 0 5px 50px 0 #ff0000;
 text-shadow: 0 0 5px #ff0000, 0 0 5px #ff0000;
