--- a/style.css
+++ b/style.css
@@ -132,10 +132,10 @@ position: relative;
 text-align:center;
 width: 25%;
 padding: 4%;
-font-size:3.5%;
+font-size:10px;
 color: #FF0000;
 font-family: poppins;
-font-weight:40;
+font-weight:10px;
 border: 5px solid #FF0000;
 text-transform: uppercase;
 letter-spacing: 15px;
