--- a/style.css
+++ b/style.css
@@ -128,7 +128,9 @@ body {
 
 
 .box {
-position: relative;
+position: absolute;
+top: 50%;
+left:10%;.
 text-align:center;
 width: 25%;
 padding: 4%;
