--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ font-family: sans-serif;
 
 background:  no-repeat url("https://geekzilla.tech/home/wp-content/uploads/2020/06/image-1.jpg"), #bf0000;
 /*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;*/
-background-size: cover 100% 50px;
+background-size: cover;
+width: 100%;
+height:30%;
 
 background-attachement: fixed;
 
