--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ background:  no-repeat url("https://geekzilla.tech/home/wp-content/uploads/2020/
 width: 100%;
 height: 250px;
 
-background-attachement: fixed;
+/*background-attachement: fixed;*/
 
 }
 
