--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
 font-family: sans-serif;
 
-background:  no-repeat url("https://geekzilla.tech/home/wp-content/uploads/2020/06/image-1.jpg"), #bf0000;
-/*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;*/
-/*background-size: cover;*/
-width: auto;
+background: url("https://geekzilla.tech/home/wp-content/uploads/2020/06/image-1.jpg"), #bf0000;
+background-repeat: no-repeat;
+/*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;
+background-size: cover;*/
+width: 100%;
 height: 250px;
 
 /*background-attachement: fixed;*/
