--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ background: url("https://geekzilla.tech/home/wp-content/uploads/2020/06/image-1.
 background-repeat: no-repeat;
 /*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;
 background-size: cover;*/
-width: 100%;
+margin: 100%;
 height: 250px;
 
 /*background-attachement: fixed;*/
