--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ background: url("https://www.slashgear.com/wp-content/uploads/2020/06/Minecraft-
 background-repeat: no-repeat;
 /*background:  no-repeat url("https://thumbs.gfycat.com/PrestigiousMessyEmeraldtreeskink-max-14mb.gif"), #ff0000;
 */
-background-size: cover;
+background-size: cover 100%;
 /*margin: 100%;
 height: 250px;*/
 
